--- a/.github/ISSUE_TEMPLATE/---------.md
+++ b/.github/ISSUE_TEMPLATE/---------.md
@@ -1,29 +1,24 @@
 ---
-name: タスクテンプレート
-about: タスクを作成するときに使用してください
+name: 助けてテンプレート
+about: 緊急性の高い質問があるときに使用してください
 title: ''
-labels: enhancement
+labels: bug
 assignees: ''
 
 ---
 
 ## 概要
 
-- 開発に入る前に「[salon_app_doc の README.md](https://github.com/kboy-salon/salon_app_doc)」 を読んでください。
-- 例：ログインボタンを実装
+例：masterブランチに直接コミットしてしまいました！！！
 
-## 要件
+## 詳細
 
-- 例：メールアドレスはログインしているユーザのメールアドレスを表示する
-- 下記のイメージ図を参考にしてください。
-
-- デザインは別途まとめて対応するので、Flutter 標準Widgetを使って簡易的な実装にとどめてください。
-- 要件以外の要件をどうするかは、エンジニアにお任せします。迷ったら相談してください。
+例：コミットのURLは[こちら](URL)ですm(T _ T)m
 
 ## 期限
 
-- 例：2020/08/01
+2020/08/01
 
-## 親ストーリー
+## 関連タスク(任意)
 
-ここに親ストーリーのissue番号を記載する
+#2
